# AnalogML

./: Makefile  QuantizedAdam.py  README.md  ShapeMatrixGenerator.py  TextMatrixGenerator.py  classification_neuron_table.md  hidden_layer_neuron_analysis.md  hidden_neuron_table.md  layer_0_biases.csv  layer_0_weights.csv  layer_2_biases.csv  layer_2_weights.csv  layer_4_biases.csv  layer_4_weights.csv  layer_6_biases.csv  layer_6_weights.csv  layer_8_biases.csv  layer_8_weights.csv  map_ideal_resistors_to_commercial.py  mlp.py  predict.py  pyproject.toml  resistor_mapping.py  resistor_values_layer_0_biases.csv  resistor_values_layer_0_weights.csv  resistor_values_layer_2_biases.csv  resistor_values_layer_2_weights.csv  resistor_values_layer_4_biases.csv  resistor_values_layer_4_weights.csv  run_mlp.py  text_to_matrix.py  trained_model.pth
ltspice/: singleNeuronOneFeature.net  spice.py
