[tool.poetry]
name = "analogml"
version = "0.1.0"
description = "A project looking to implement a fully connected feed-forward artificial neural network completely in analog hardware. Part of Columbia ELENE3390, Electrical Engineering Senior Capstone Projects"
authors = ["Nolan Tremelling <34580718+NolanTrem@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspice = "^1.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

